<resources>
    <string name="app_name">Lizan</string>
    <string name="please_wait">Please wait …</string>
    <string name="no_internet">Your are not connected to the internet</string>
    <string name="not_connection_server">Error connecting to the server</string>
    <string name="back">Previous</string>
    <string name="next">Next</string>
    <string name="inter">Inter</string>
    <string name="search">Search in</string>
    <string name="languages">Languages</string>
    <string name="history">History</string>
    <string-array name="intro_slider_descriptions">
        <item>See the best and most beautiful places in Kurdistan province</item>
        <item>Find all eco-tours and tours in the province easily and conveniently</item>
        <item>Browse and shop easily</item>
    </string-array>
    <string-array name="home_options_title">
        <item>معرفی و آشنایی با تمام خدمات پزشکی</item>
        <item>معرفی بهترین هتل ها و مسافرخانه ها</item>
        <item>معرفی دستوران ها و غذا خوری های مطرح</item>
        <item>ارائه خدمات حمل و نقل ایمن</item>
    </string-array>

    <string-array name="stories_title">
        <item>Medical services</item>
        <item>Restaurant and dining</item>
        <item>Tour and transportation services</item>
        <item>Hotels and resorts</item>
    </string-array>

    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="password_again">Password again</string>
    <string name="login">Login</string>
    <string name="password_recovery">Password recovery</string>
    <string name="err_empty_fields">Fill in all the fields</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="transactions">Transactions</string>
    <string name="support">Support</string>
    <string name="terms_and_privacy_policy">Terms and Privacy Policy</string>
    <string name="email">Email</string>
    <string name="more">more</string>
    <string name="attributes">Attributes</string>
    <string name="comments">Comments</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_comment">Add comment</string>
    <string name="add_to_cart">Add to cart</string>
</resources>