<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ItemActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/name"
                style="@style/Theme.Lizan.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin"
                android:padding="@dimen/padding"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/padding"/>
            <androidx.appcompat.widget.AppCompatToggleButton
                android:id="@+id/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="m3"/>
            <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TabLayout">
                <com.google.android.material.tabs.TabItem
                    android:id="@+id/attrs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attributes"/>
                <com.google.android.material.tabs.TabItem
                    android:id="@+id/about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"/>
                <com.google.android.material.tabs.TabItem
                    android:id="@+id/comments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comments"/>

            </com.google.android.material.tabs.TabLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>